--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html {
 }
 .navbar.sticky {
   padding: 2px 0;
-  background-color: crimson;
+  background-color: #66BFBF;
 }
 .max-width {
   max-width: 1300px;
@@ -44,7 +44,7 @@ html {
 }
 
 .navbar .logo a span {
-  color: crimson;
+  color: #FF407D;
 }
 .navbar.sticky .logo a span {
   color: white;
@@ -66,7 +66,7 @@ html {
   transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-  color: crimson;
+  color: #FF407D;
 }
 .navbar.sticky .menu li a:hover {
   color: #000;
